--- a/BTVN-1/App.config
+++ b/BTVN-1/App.config
@@ -10,6 +10,7 @@
   <connectionStrings>
     <add name="ghengoiEntities" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-K98I0TF\SQLEXPRESS;initial catalog=ghengoi;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ghengoiEntities1" connectionString="metadata=res://*/Model.Model1.csdl|res://*/Model.Model1.ssdl|res://*/Model.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-K98I0TF\SQLEXPRESS;initial catalog=ghengoi;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ghengoiEntities11" connectionString="data source=DESKTOP-K98I0TF\SQLEXPRESS;initial catalog=ghengoi;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
